--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	<h1>Bootstrap Modals</h1>
 
 	<!-- Button trigger modal -->
-	<button type="button" class="btn btn-primary" id="open-modal" data-bs-toggle="modal" data-bs-target="#exampleModal">
+	<button type="button" class="btn btn-primary" id="open-modal" data-bs-toggle="modal" data-bs-target="#newton-modal">
 		Launch demo modal
 	</button>
 
